# SDL2Videogame

./: .gitignore  CMakeLists.txt  HelloZelda  HelloZelda.cpp  Makefile  README.md  ZeldaEng.cpp  ZeldaEng.hpp  ZeldaEngine  main.cpp
Logger/: CMakeLists.txt  Log.cpp  logger.h
assets/: Template.pyxel  TestMap3232Nr2.txt  TestMap3232Nr3.txt
assets/Tilemaps/Tilesetter/: Test.tset
include/: MyContactListener.h  Vector2D.h  components.h  core.h  countdown.h  ecs.h  gameObject.h  globals.h  log.h  logger.h  textureManager.h  tilemap.h  timer.h  timestep.h  world.h  zeldaEng.h
include/ECS/: BoxCollider2DComponent.h  ColliderComponent.h  Collision.h  KeyboardController.h  Rigidbody2DComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  components.h  ecs.h  positionComponent.h  spriteComponent.h
include/logger/: logger.h
src/: MyContactListener.cpp  Rigidbody2DComponent.cpp  Vector2D.cpp  collision.cpp  ecs.cpp  gameObject.cpp  globals.cpp  log.cpp  main.cpp  textureManager.cpp  tilemap.cpp  world.cpp  zeldaEng.cpp
src/logger/: log.cpp
